--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" ./>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" ./>
     <link rel="stylesheet" href="./style.css" ./>
-    <title>MUNDO DE SEGURIDAD</title>
+    <title>TAKYA CRUP</title>
 </head>
 <body>
+    <h1>Mundo De Seguridad</h1>
     <div class="flex-container">
     <div class="flex-item">1</div>
     <div class="flex-item">2</div>
