--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8" ./>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" ./>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="./style.css" ./>
+    <link rel="stylesheet" href="./css/style.css" />
     <title>TAKYA CRUP</title>
 </head>
 <body>
     <h1>Mundo De Seguridad</h1>
     <div class="flex-container">
-    <div class="flex-item">1</div>
-    <div class="flex-item">2</div>
+    <div class="flex-item">1. Servicio de Seguridad Privada </div>
+    <div class="flex-item">2. Servicio de Prevención </div>
 
     </div>
     
