style-css--proyecto-3-fs

--- a/index.html
+++ b/index.html
@@ -7,13 +7,32 @@
     <link rel="stylesheet" href="./css/style.css" />
     <title>TAKYA CRUP</title>
 </head>
-<body>
+<body class="body">
+    <main class="element">
+        <article class="hero">
+            <div class="card">
+                <header>
+                    <img src="./img/imagen-seguridad.webp" alt="Takya Crup" width="350" height="280">
+                </header>
+                <section>
+                    <h1>Takya Crup</h1>
+                    <h2>🐯Seguridad Preventiva y privada🐯</h2>
+                    <p>
+                        Brindamos seguridad para la proteccion de su familia
+                    </p>
+                </section>
+        </article>
+    </main>
     <h1>Mundo De Seguridad</h1>
     <div class="flex-container">
     <div class="flex-item">1. Servicio de Seguridad Privada </div>
     <div class="flex-item">2. Servicio de Prevención </div>
-
     </div>
+    <footer>
+        <nav>
+            
+        </nav>
+    </footer>
     
 </body>
 </html>
