bootstrap-proyecto-3-fs

--- a/index.html
+++ b/index.html
@@ -4,10 +4,29 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="./css/index.css" />
     <link rel="stylesheet" href="./css/style.css" />
     <title>TAKYA CRUP</title>
+   
 </head>
-<body class="body">
+<body class="body"> 
+  <!-- As a heading -->
+  <nav class="navbar bg-light">
+    <div class="container-fluid">
+      <span class="navbar-brand mb-0 h1">CORPORACIÓN TAKYA S.A.</span>
+    </div>
+  </nav>
+    <!-- As a link -->
+<nav class="navbar bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">HOME SEGURIDAD</a>
+    </div>
+  </nav>
+  <nav class="navbar bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">NOSOTROS</a>
+    </div>
+  </nav>
     <main class="element">
         <article class="hero">
             <div class="card">
@@ -15,10 +34,10 @@
                     <img src="./img/imagen-seguridad.webp" alt="Takya Crup" width="350" height="280">
                 </header>
                 <section>
-                    <h1>Takya Crup</h1>
-                    <h2>🐯Seguridad Preventiva y privada🐯</h2>
-                    <p>
-                        Brindamos seguridad para la proteccion de su familia
+                    <h1 class="h1">🐯Takya Crup🐯</h1>
+                    <h2 class="h2">Seguridad Preventiva y privada</h2>
+                    <p class="p">
+                        Brindamos seguridad para la proteccion y tranquilidad de su familia.
                     </p>
                 </section>
         </article>
@@ -29,9 +48,7 @@
     <div class="flex-item">2. Servicio de Prevención </div>
     </div>
     <footer>
-        <nav>
-            
-        </nav>
+
     </footer>
     
 </body>
