js-proyecto-3-fs

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,26 +8,37 @@
     <link rel="stylesheet" href="./css/index.css" />
     <link rel="stylesheet" href="./css/style.css" />
     <title>TAKYA CRUP</title>
-   
+
 </head>
-<body class="body"> 
-  <!-- As a heading -->
-  <nav class="navbar bg-light">
-    <div class="container-fluid">
-      <span class="navbar-brand mb-0 h1">CORPORACIÓN TAKYA S.A.</span>
-    </div>
-  </nav>
+<header class="">
+    <div class="wrapper">
+        <div class="logo">TakyaCrup</div>
+    <nav>
+        <a href="#">Inicio</a>
+        <a href="#">Servicio</a>
+        <a href="#">Proyecto</a>
+        <a href="#">Contacto</a>
+    </nav>
+</header>
+
+<body class="body">
+    <!-- As a heading -->
+    <nav class="navbar bg-light">
+        <div class="container-fluid">
+            <span class="navbar-brand mb-0 h1">EMPRESA PERUANA DE SEGURIDAD</span>
+        </div>
+    </nav>
     <!-- As a link -->
-<nav class="navbar bg-light">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">HOME SEGURIDAD</a>
-    </div>
-  </nav>
-  <nav class="navbar bg-light">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">NOSOTROS</a>
-    </div>
-  </nav>
+    <nav class="navbar bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">BASE MATRIZ PERU .🇵🇪</a>
+        </div>
+    </nav>
+    <nav class="navbar bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">BASE ARGENTINA .🇦🇷</a>
+        </div>
+    </nav>
     <main class="element">
         <article class="hero">
             <div class="card">
@@ -42,14 +54,15 @@
                 </section>
         </article>
     </main>
-    <h1>Mundo De Seguridad</h1>
+    <h3 class="h3">Mundo De Seguridad</h3>
     <div class="flex-container">
-    <div class="flex-item">1. Servicio de Seguridad Privada </div>
-    <div class="flex-item">2. Servicio de Prevención </div>
+        <div class="flex-item">1. Servicio de Seguridad Privada </div>
+        <div class="flex-item">2. Servicio de Prevención </div>
     </div>
     <footer>
 
     </footer>
-    
+
 </body>
+
 </html>
