--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="./css/index.css" />
     <link rel="stylesheet" href="./css/style.css" />
+    <script src="https://code.jquery.com/jquery-latest.js"></script>
     <title>TAKYA CRUP</title>
-
+    <script src="header.js"></script>
 </head>
 <header class="">
     <div class="wrapper">
